; ModuleID = '/home/carl/AnghaBench/freebsd/sys/mips/nlm/extr_usb_init.c_nlm_usb_intr_en.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/mips/nlm/extr_usb_init.c_nlm_usb_intr_en.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@USB_INT_EN = common dso_local global i32 0, align 4
@USB_CTRL_INTERRUPT_EN = common dso_local global i32 0, align 4
@USB_OHCI_INTERRUPT_EN = common dso_local global i32 0, align 4
@USB_OHCI_INTERRUPT1_EN = common dso_local global i32 0, align 4
@USB_OHCI_INTERRUPT2_EN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32)* @nlm_usb_intr_en to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @nlm_usb_intr_en(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %7 = load i32, i32* %3, align 4
  %8 = load i32, i32* %4, align 4
  %9 = call i32 @nlm_get_usb_regbase(i32 %7, i32 %8)
  store i32 %9, i32* %6, align 4
  %10 = load i32, i32* %6, align 4
  %11 = load i32, i32* @USB_INT_EN, align 4
  %12 = call i32 @nlm_read_usb_reg(i32 %10, i32 %11)
  store i32 %12, i32* %5, align 4
  %13 = load i32, i32* @USB_CTRL_INTERRUPT_EN, align 4
  %14 = load i32, i32* @USB_OHCI_INTERRUPT_EN, align 4
  %15 = or i32 %13, %14
  %16 = load i32, i32* @USB_OHCI_INTERRUPT1_EN, align 4
  %17 = or i32 %15, %16
  %18 = load i32, i32* @USB_OHCI_INTERRUPT2_EN, align 4
  %19 = or i32 %17, %18
  store i32 %19, i32* %5, align 4
  %20 = load i32, i32* %6, align 4
  %21 = load i32, i32* @USB_INT_EN, align 4
  %22 = load i32, i32* %5, align 4
  %23 = call i32 @nlm_write_usb_reg(i32 %20, i32 %21, i32 %22)
  ret void
}

declare dso_local i32 @nlm_get_usb_regbase(i32, i32) #1

declare dso_local i32 @nlm_read_usb_reg(i32, i32) #1

declare dso_local i32 @nlm_write_usb_reg(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
